force-app/main/default/objects/Agency_Relation__c/Agency_Relation__c.object-meta.xml
<CustomObject>
    <label>Agency Relation</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Agency Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>