force-app/main/default/objects/Agency_Relation__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipLabel>Agency Relations</relationshipLabel>
    <relationshipName>Agency_Relations1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>