force-app/main/default/objects/Agency_Relation__c/fields/Primary_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agency Relations (Primary Point of Contact)</relationshipLabel>
    <relationshipName>Agency_Relations1</relationshipName>
    <type>Lookup</type>
</CustomField>