force-app/main/default/objects/Agency_Relation__c/fields/Secondary_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agency Relations</relationshipLabel>
    <relationshipName>Agency_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>